<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText

        android:id="@+id/edit_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        android:importantForAutofill="no"
        android:inputType="text" />

    <EditText
        android:id="@+id/edit_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        android:importantForAutofill="no"
        android:inputType="text" />

    <EditText
        android:id="@+id/edit_priority"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/priority"
        android:importantForAutofill="no"
        android:inputType="number" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="addNote"
        android:text="@string/add_note" />

    <Button
        android:id="@+id/load_notes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="loadNote"
        android:text="@string/load_note" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/note_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </ScrollView>

</LinearLayout>